IPV6 experimental support
git-svn-id: https://svn.code.sf.net/p/yetanotherbacnetexplorer/code/trunk@166 8324893d-a7a8-4806-89d4-2f8fea5c7913

--- a/CodeExamples/Bacnet.Room.Simulator/Bacnet.Room.Simulator.csproj
+++ b/CodeExamples/Bacnet.Room.Simulator/Bacnet.Room.Simulator.csproj
@@ -97,6 +97,9 @@
     <Compile Include="..\..\Yabe\BACnetTransport.cs">
       <Link>BACnetTransport.cs</Link>
     </Compile>
+    <Compile Include="..\..\Yabe\BACnetTransportIPv6.cs">
+      <Link>BACnetTransportIPv6.cs</Link>
+    </Compile>
     <Compile Include="BACnetActivity.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
