--- a/DemoServer/DemoServer.csproj
+++ b/DemoServer/DemoServer.csproj
@@ -51,6 +51,9 @@
     <Compile Include="..\Yabe\BACnetTransport.cs">
       <Link>BACnetTransport.cs</Link>
     </Compile>
+    <Compile Include="..\..\Yabe\BACnetTransportIPv6.cs">
+      <Link>BACnetTransportIPv6.cs</Link>
+    </Compile>
     <Compile Include="DeviceStorage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
