IPv6 enhancement & patch
git-svn-id: https://svn.code.sf.net/p/yetanotherbacnetexplorer/code/trunk@168 8324893d-a7a8-4806-89d4-2f8fea5c7913

--- a/CodeExamples/Xamarin/YabeStack/YabeStack.csproj
+++ b/CodeExamples/Xamarin/YabeStack/YabeStack.csproj
@@ -52,6 +52,9 @@
     <Compile Include="..\..\..\Yabe\BACnetTransport.cs">
       <Link>BACnetTransport.cs</Link>
     </Compile>
+    <Compile Include="..\..\..\Yabe\BACnetTransportIPv6.cs">
+      <Link>BACnetTransportIPv6.cs</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
