DemoBBMD with IPV6. Small other adjustments.
git-svn-id: https://svn.code.sf.net/p/yetanotherbacnetexplorer/code/trunk@170 8324893d-a7a8-4806-89d4-2f8fea5c7913

--- a/CodeExamples/Bacnet.Room.Simulator/Bacnet.Room.Simulator.csproj
+++ b/CodeExamples/Bacnet.Room.Simulator/Bacnet.Room.Simulator.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Bacnet.Room.Simulator</RootNamespace>
     <AssemblyName>Bacnet.Room.Simulator</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -79,6 +79,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Management" />
     <Reference Include="System.Windows.Forms" />
