--- a/CodeExamples/AnotherStorageImplementation/AnotherStorageImplementation.csproj
+++ b/CodeExamples/AnotherStorageImplementation/AnotherStorageImplementation.csproj
@@ -47,6 +47,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\..\Yabe\BACnetBase.cs">
