DateTimeValue class in alternative storage solution
git-svn-id: https://svn.code.sf.net/p/yetanotherbacnetexplorer/code/trunk@194 8324893d-a7a8-4806-89d4-2f8fea5c7913

--- a/CodeExamples/AnotherStorageImplementation/AnotherStorageImplementation.csproj
+++ b/CodeExamples/AnotherStorageImplementation/AnotherStorageImplementation.csproj
@@ -70,6 +70,7 @@
     <Compile Include="BacnetObjects\AnalogObject.cs" />
     <Compile Include="BacnetObjects\AnalogObjectEvent.cs" />
     <Compile Include="BacnetObjects\AnalogOutput.cs" />
+    <Compile Include="BacnetObjects\BacnetDateTime.cs" />
     <Compile Include="BacnetObjects\BacnetFile.cs" />
     <Compile Include="BacnetObjects\BaCSharpObject.cs" />
     <Compile Include="BacnetObjects\BaCSharpType.cs" />
