Sunride & sunset in weather server code
git-svn-id: https://svn.code.sf.net/p/yetanotherbacnetexplorer/code/trunk@195 8324893d-a7a8-4806-89d4-2f8fea5c7913

--- a/CodeExamples/Wheather2_to_Bacnet/Wheather2_to_Bacnet.csproj
+++ b/CodeExamples/Wheather2_to_Bacnet/Wheather2_to_Bacnet.csproj
@@ -64,6 +64,9 @@
     <Compile Include="..\AnotherStorageImplementation\BacnetObjects\AnalogObjectEvent.cs">
       <Link>AnalogObjectEvent.cs</Link>
     </Compile>
+    <Compile Include="..\AnotherStorageImplementation\BacnetObjects\BacnetDateTime.cs">
+      <Link>BacnetDateTime.cs</Link>
+    </Compile>
     <Compile Include="..\AnotherStorageImplementation\BacnetObjects\BaCSharpObject.cs">
       <Link>BaCSharpObject.cs</Link>
     </Compile>
@@ -85,6 +88,7 @@
     <Compile Include="..\AnotherStorageImplementation\Subscription.cs">
       <Link>Subscription.cs</Link>
     </Compile>
+    <Compile Include="AAUtil.cs" />
     <Compile Include="BacnetActivity.cs" />
     <Compile Include="Program.cs">
       <SubType>Component</SubType>
