--- a/OfflineDebug/OfflineStackDebug.csproj
+++ b/OfflineDebug/OfflineStackDebug.csproj
@@ -34,6 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="SharpPcap">
       <HintPath>..\Yabe\SharpPcap.dll</HintPath>
     </Reference>
