--- a/OfflineDebug/OfflineStackDebug.csproj
+++ b/OfflineDebug/OfflineStackDebug.csproj
@@ -51,6 +51,9 @@
     <Compile Include="..\Yabe\BACnetTransport.cs">
       <Link>BACnetTransport.cs</Link>
     </Compile>
+    <Compile Include="..\Yabe\BACnetTransportIPv6.cs">
+      <Link>BACnetTransportIPv6.cs</Link>
+    </Compile>
     <Compile Include="Program.cs" />
   </ItemGroup>
   <ItemGroup>
