Adds property description in the Alarm summary
git-svn-id: https://svn.code.sf.net/p/yetanotherbacnetexplorer/code/trunk@252 8324893d-a7a8-4806-89d4-2f8fea5c7913

--- a/Yabe/Properties/Settings.settings
+++ b/Yabe/Properties/Settings.settings
@@ -98,5 +98,8 @@
     <Setting Name="IPv6_Support" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="DescriptionInAlarmSummary" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
