Refactoring : split Bacnet Serial transports into a separate file
git-svn-id: https://svn.code.sf.net/p/yetanotherbacnetexplorer/code/trunk@254 8324893d-a7a8-4806-89d4-2f8fea5c7913

--- a/DemoServer/DemoServer.csproj
+++ b/DemoServer/DemoServer.csproj
@@ -54,6 +54,9 @@
     <Compile Include="..\Yabe\BACnetTransportIPv6.cs">
       <Link>BACnetTransportIPv6.cs</Link>
     </Compile>
+    <Compile Include="..\Yabe\BacnetTransportSerial.cs">
+      <Link>BacnetTransportSerial.cs</Link>
+    </Compile>
     <Compile Include="DeviceStorage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
