Multi-select in the address space & version 1.1.6 preparation cleanup
git-svn-id: https://svn.code.sf.net/p/yetanotherbacnetexplorer/code/trunk@264 8324893d-a7a8-4806-89d4-2f8fea5c7913

--- a/Yabe/Yabe.csproj
+++ b/Yabe/Yabe.csproj
@@ -154,6 +154,7 @@
     <Compile Include="ScheduleDisplay.Designer.cs">
       <DependentUpon>ScheduleDisplay.cs</DependentUpon>
     </Compile>
+    <Compile Include="TreeView.cs" />
     <Compile Include="TrendLogDisplay.cs">
       <SubType>Form</SubType>
     </Compile>
