Somes Froms resizing
git-svn-id: https://svn.code.sf.net/p/yetanotherbacnetexplorer/code/trunk@277 8324893d-a7a8-4806-89d4-2f8fea5c7913

--- a/Yabe/Properties/Settings.settings
+++ b/Yabe/Properties/Settings.settings
@@ -102,7 +102,7 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="DisplayIdWithName" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
