Allow user external plugins in .dll files (with menu access)
git-svn-id: https://svn.code.sf.net/p/yetanotherbacnetexplorer/code/trunk@283 8324893d-a7a8-4806-89d4-2f8fea5c7913

--- a/Yabe/Properties/Settings.settings
+++ b/Yabe/Properties/Settings.settings
@@ -104,5 +104,8 @@
     <Setting Name="DisplayIdWithName" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="Plugins" Type="System.String" Scope="User">
+      <Value Profile="(Default)">CheckReliability</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
