Live graph, first attempt
git-svn-id: https://svn.code.sf.net/p/yetanotherbacnetexplorer/code/trunk@297 8324893d-a7a8-4806-89d4-2f8fea5c7913

--- a/Yabe/Properties/Settings.settings
+++ b/Yabe/Properties/Settings.settings
@@ -107,5 +107,11 @@
     <Setting Name="Plugins" Type="System.String" Scope="User">
       <Value Profile="(Default)">CheckReliability</Value>
     </Setting>
+    <Setting Name="GraphDotStyle" Type="ZedGraph.SymbolType" Scope="User">
+      <Value Profile="(Default)">Circle</Value>
+    </Setting>
+    <Setting Name="GraphLineStep" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
