--- a/Yabe/app.config
+++ b/Yabe/app.config
@@ -112,6 +112,15 @@
         <setting name="Plugins" serializeAs="String">
           <value>CheckReliability</value>
         </setting>
+        <setting name="GraphDotStyle" serializeAs="String">
+          <value>Circle</value>
+        </setting>
+        <setting name="GraphLineStep" serializeAs="String">
+          <value>False</value>
+        </setting>
+        <setting name="SettingsUpgradeRequired" serializeAs="String">
+          <value>True</value>
+        </setting>
       </Yabe.Properties.Settings>
     </userSettings>
 </configuration>
