Change in Bacnet/Ethernet pcap interface
git-svn-id: https://svn.code.sf.net/p/yetanotherbacnetexplorer/code/trunk@311 8324893d-a7a8-4806-89d4-2f8fea5c7913

--- a/Yabe/Properties/Settings.settings
+++ b/Yabe/Properties/Settings.settings
@@ -105,7 +105,7 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="Plugins" Type="System.String" Scope="User">
-      <Value Profile="(Default)">CheckReliability</Value>
+      <Value Profile="(Default)">CheckReliability, CheckStatusFlags</Value>
     </Setting>
     <Setting Name="GraphDotStyle" Type="ZedGraph.SymbolType" Scope="User">
       <Value Profile="(Default)">Circle</Value>
