--- a/Yabe/app.config
+++ b/Yabe/app.config
@@ -110,7 +110,7 @@
           <value>True</value>
         </setting>
         <setting name="Plugins" serializeAs="String">
-          <value>CheckReliability</value>
+          <value>CheckReliability, CheckStatusFlags</value>
         </setting>
         <setting name="GraphDotStyle" serializeAs="String">
           <value>Circle</value>
