Add COVTimeFormater user setting
git-svn-id: https://svn.code.sf.net/p/yetanotherbacnetexplorer/code/trunk@313 8324893d-a7a8-4806-89d4-2f8fea5c7913

--- a/Yabe/app.config
+++ b/Yabe/app.config
@@ -121,6 +121,9 @@
         <setting name="SettingsUpgradeRequired" serializeAs="String">
           <value>True</value>
         </setting>
+        <setting name="COVTimeFormater" serializeAs="String">
+          <value>HH:mm:ss</value>
+        </setting>
       </Yabe.Properties.Settings>
     </userSettings>
 </configuration>
