ListOutOfService plugin by Franck Schubert
git-svn-id: https://svn.code.sf.net/p/yetanotherbacnetexplorer/code/trunk@349 8324893d-a7a8-4806-89d4-2f8fea5c7913

--- a/Yabe/app.config
+++ b/Yabe/app.config
@@ -110,7 +110,7 @@
           <value>True</value>
         </setting>
         <setting name="Plugins" serializeAs="String">
-          <value>CheckReliability, CheckStatusFlags</value>
+          <value>CheckReliability, CheckStatusFlags, ListOutOfService</value>
         </setting>
         <setting name="GraphDotStyle" serializeAs="String">
           <value>Circle</value>
