Structured view display modification
git-svn-id: https://svn.code.sf.net/p/yetanotherbacnetexplorer/code/trunk@355 8324893d-a7a8-4806-89d4-2f8fea5c7913

--- a/Yabe/Properties/Settings.settings
+++ b/Yabe/Properties/Settings.settings
@@ -74,7 +74,7 @@
     <Setting Name="Udp_MaxPayload" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">1472</Value>
     </Setting>
-    <Setting Name="DefaultPreferStructuredView" Type="System.Boolean" Scope="User">
+    <Setting Name="GetStructuredView" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="DefaultUdpIp" Type="System.String" Scope="User">
