--- a/Yabe/app.config
+++ b/Yabe/app.config
@@ -79,7 +79,7 @@
         <setting name="Udp_MaxPayload" serializeAs="String">
           <value>1472</value>
         </setting>
-        <setting name="DefaultPreferStructuredView" serializeAs="String">
+        <setting name="GetStructuredView" serializeAs="String">
           <value>True</value>
         </setting>
         <setting name="DefaultUdpIp" serializeAs="String">
