--- a/Yabe/app.config
+++ b/Yabe/app.config
@@ -17,10 +17,10 @@
           <value>-1</value>
         </setting>
         <setting name="GUI_FormSize" serializeAs="String">
-          <value>0, 0</value>
+          <value>-1, -1</value>
         </setting>
         <setting name="GUI_FormState" serializeAs="String">
-          <value>Normal</value>
+          <value>Maximized</value>
         </setting>
         <setting name="Udp_ExclusiveUseOfSocket" serializeAs="String">
           <value>False</value>
@@ -32,10 +32,10 @@
           <value>False</value>
         </setting>
         <setting name="DefaultRetries" serializeAs="String">
-          <value>3</value>
+          <value>2</value>
         </setting>
         <setting name="DefaultTimeout" serializeAs="String">
-          <value>1000</value>
+          <value>2000</value>
         </setting>
         <setting name="DefaultUdpPort" serializeAs="String">
           <value>47808</value>
@@ -44,7 +44,7 @@
           <value>38400</value>
         </setting>
         <setting name="DefaultSourceAddress" serializeAs="String">
-          <value>-1</value>
+          <value>128</value>
         </setting>
         <setting name="DefaultMaxMaster" serializeAs="String">
           <value>127</value>
@@ -79,8 +79,8 @@
         <setting name="Udp_MaxPayload" serializeAs="String">
           <value>1472</value>
         </setting>
-        <setting name="GetStructuredView" serializeAs="String">
-          <value>True</value>
+        <setting name="Address_Space_Structured_View" serializeAs="String">
+          <value>Structured</value>
         </setting>
         <setting name="DefaultUdpIp" serializeAs="String">
           <value />
@@ -95,10 +95,10 @@
           <value />
         </setting>
         <setting name="Subscriptions_ReplacementPollingPeriod" serializeAs="String">
-          <value>5</value>
+          <value>1000</value>
         </setting>
-        <setting name="ObjectNameFile" serializeAs="String">
-          <value />
+        <setting name="Auto_Store_Object_Names_File" serializeAs="String">
+          <value>C:\Yabe Stored Object Names\Auto_Stored_Object_Names.YabeMap</value>
         </setting>
         <setting name="IPv6_Support" serializeAs="String">
           <value>False</value>
@@ -110,10 +110,10 @@
           <value>True</value>
         </setting>
         <setting name="Plugins" serializeAs="String">
-          <value>CheckReliability, CheckStatusFlags, ListOutOfService</value>
+          <value>CheckReliability, CheckStatusFlags, ListOutOfService, GlobalCommander</value>
         </setting>
         <setting name="GraphDotStyle" serializeAs="String">
-          <value>Circle</value>
+          <value>Square</value>
         </setting>
         <setting name="GraphLineStep" serializeAs="String">
           <value>False</value>
@@ -125,7 +125,25 @@
           <value>HH:mm:ss</value>
         </setting>
         <setting name="GUI_SubscriptionColumns" serializeAs="String">
-          <value />
+          <value>0;46;1;129;2;160;3;60;4;60;5;55;6;60;7;4</value>
+        </setting>
+        <setting name="GUI_SplitterMiddle" serializeAs="String">
+          <value>-1</value>
+        </setting>
+        <setting name="COV_Export_Path" serializeAs="String">
+          <value>C:\COV Graph Exports\</value>
+        </setting>
+        <setting name="UsePollingByDefault" serializeAs="String">
+          <value>True</value>
+        </setting>
+        <setting name="Auto_Store_Object_Names" serializeAs="String">
+          <value>False</value>
+        </setting>
+        <setting name="Auto_Store_Period_Minutes" serializeAs="String">
+          <value>5</value>
+        </setting>
+        <setting name="Vertical_Object_Splitter_Orientation" serializeAs="String">
+          <value>False</value>
         </setting>
       </Yabe.Properties.Settings>
     </userSettings>
