update project and visual studio solution configurations

--- a/Yabe/app.config
+++ b/Yabe/app.config
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="Yabe.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="Yabe.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <userSettings>
@@ -59,7 +59,7 @@
           <value>120</value>
         </setting>
         <setting name="GUI_LastFilename" serializeAs="String">
-          <value />
+          <value/>
         </setting>
         <setting name="DefaultDownloadSpeed" serializeAs="String">
           <value>0</value>
@@ -83,7 +83,7 @@
           <value>Structured</value>
         </setting>
         <setting name="DefaultUdpIp" serializeAs="String">
-          <value />
+          <value/>
         </setting>
         <setting name="DefaultWritePriority" serializeAs="String">
           <value>LOWEST_AND_DEFAULT</value>
@@ -92,7 +92,7 @@
           <value>-1</value>
         </setting>
         <setting name="DefaultBBMD" serializeAs="String">
-          <value />
+          <value/>
         </setting>
         <setting name="Subscriptions_ReplacementPollingPeriod" serializeAs="String">
           <value>1000</value>
@@ -147,4 +147,4 @@
         </setting>
       </Yabe.Properties.Settings>
     </userSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup></configuration>
