--- a/CodeExamples/BasicServer/BasicServer.csproj
+++ b/CodeExamples/BasicServer/BasicServer.csproj
@@ -49,5 +49,6 @@
     <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.4.421302">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="System.IO.Ports" Version="7.0.0" />
   </ItemGroup>
 </Project>
