--- a/CodeExamples/Wheather2_to_Bacnet/Wheather2_to_Bacnet.csproj
+++ b/CodeExamples/Wheather2_to_Bacnet/Wheather2_to_Bacnet.csproj
@@ -66,10 +66,12 @@
     <Content Include="parapluie-icone-6978.ico" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Core.System.Configuration.Install" Version="1.1.0" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
     <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.4.421302">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="System.ServiceProcess.ServiceController" Version="7.0.0" />
   </ItemGroup>
 </Project>
