Update project files

--- a/CodeExamples/BacnetToDatabase/BacnetToDatabase.csproj
+++ b/CodeExamples/BacnetToDatabase/BacnetToDatabase.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{AB80ADFC-41DD-4E98-87CB-89C358B9E65D}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BacnetToDatabase</RootNamespace>
     <AssemblyName>BacnetToDatabase</AssemblyName>
