--- a/CodeExamples/BasicServer/BasicServer.csproj
+++ b/CodeExamples/BasicServer/BasicServer.csproj
@@ -8,11 +8,11 @@
   <ItemGroup>
     <Reference Include="PacketDotNet, Version=0.13.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Resources\EmbeddedDll\PacketDotNet.dll</HintPath>
+      <HintPath>..\..\Yabe\Resources\EmbeddedDll\PacketDotNet.dll</HintPath>
     </Reference>
     <Reference Include="SharpPcap, Version=4.2.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Resources\EmbeddedDll\SharpPcap.dll</HintPath>
+      <HintPath>..\..\Yabe\Resources\EmbeddedDll\SharpPcap.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
