--- a/CodeExamples/LibBacnet/LibBacnet.csproj
+++ b/CodeExamples/LibBacnet/LibBacnet.csproj
@@ -33,8 +33,8 @@
     <Compile Include="..\..\Yabe\BACnetTransportEthernet.cs">
       <Link>BACnetTransport.cs</Link>
     </Compile>
-    <Compile Include="..\..\Yabe\BacnetTransportSerial.cs">
-      <Link>BacnetTransportSerial.cs</Link>
+    <Compile Include="..\..\Yabe\BACnetTransportSerial.cs">
+      <Link>BACnetTransportSerial.cs</Link>
     </Compile>
   </ItemGroup>
   <ItemGroup>
