Revert "Update project files"
This reverts commit 37ae3469d8bef87b5d26f7df9da743667f9aa43b.

--- a/CodeExamples/Bacnet.Room.Simulator/Bacnet.Room.Simulator.csproj
+++ b/CodeExamples/Bacnet.Room.Simulator/Bacnet.Room.Simulator.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net7.0-windows</TargetFramework>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <UseWindowsForms>true</UseWindowsForms>
     <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
